# muse_inference

./: .buildinfo  .gitignore  README.md  advanced_examples.html  advanced_examples.ipynb  demo.html  demo.ipynb  example.html  example.ipynb  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  userapi.html  userapi.ipynb
.doctrees/: advanced_examples.doctree  demo.doctree  environment.pickle  example.doctree  index.doctree  userapi.doctree
.doctrees/nbsphinx/: advanced_examples.ipynb  demo.ipynb  example.ipynb  userapi.ipynb
.github/workflows/: doctests.yml  pytests.yml
_sources/: advanced_examples.md.txt  demo.md.txt  example.md.txt  index.rst.txt  userapi.md.txt
_static/: basic.css
docs/: advanced_examples.md  conf.py  demo.md  docs.md  example.md  index.rst  requirements.txt  userapi.md
docs/_static/css/: muse.css
muse_inference/: __init__.py  jax.py  muse_inference.py  pymc.py  util.py
profile/: Project.toml  profile.md  pyproject.toml
test/: test_muse_inference.py
