[tool.poetry]
name = "muse-inference"
version = "0.1.0"
description = ""
authors = ["Marius Millea <mariusmillea@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
scipy = "^1.4.1"
numpy = ">=1.17.0,<1.22.0"
pymc = "4.0.0b2"
jax = "^0.2.14"
tqdm = "^4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.7"
ipython = "^7"
jaxlib = "^0.1.75"
jupytext = "^1.13"
multiprocess = "^0.70.12"
nbsphinx = "^0.8.8"
pytest = "^6.2"
Sphinx = "^4.4"
sphinx-rtd-theme = "^1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
